--- a/Project 01 - Image Replacer/manifest.json
+++ b/Project 01 - Image Replacer/manifest.json
@@ -4,7 +4,7 @@
     "version": "0.0.1",
     "manifest_version": 3,
     "permissions": ["activeTab", "scripting"],
-    "actions": {
+    "action": {
         "default_popup": "index.html"
     }
 
